--- a/getcodex-tools.html
+++ b/getcodex-tools.html
@@ -3,83 +3,309 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dYpSy Cors - Cyber Living</title>
+    <title>Source Visualizer - by DYPSY</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;800&family=JetBrains+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;700&family=JetBrains+Mono:wght@500&display=swap" rel="stylesheet">
     <style>
-        :root { --neon: #00f2ff; --bg: #010409; --card: rgba(13, 17, 23, 0.8); --border: rgba(0, 242, 255, 0.2); }
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body {
-            background-color: var(--bg); color: #fff; font-family: 'Plus Jakarta Sans', sans-serif;
-            overflow-y: auto; padding: 40px 20px 100px; display: block; -webkit-overflow-scrolling: touch;
+        :root {
+            --primary-gradient: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%);
+            --glass-bg: rgba(255, 255, 255, 0.03);
+            --glass-border: rgba(255, 255, 255, 0.08);
+            --accent-blue: #60a5fa;
+            --text-main: #f1f5f9;
         }
 
-        .container { max-width: 550px; margin: 0 auto; position: relative; }
-        .header { text-align: center; margin-bottom: 30px; }
-        .header h1 { font-size: 2.5rem; font-weight: 800; color: var(--neon); text-shadow: 0 0 15px rgba(0,242,255,0.2); }
+        * { margin: 0; padding: 0; box-sizing: border-box; }
 
-        /* --- STATS BOX (MOVING NUMBERS) --- */
-        .live-stats { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 10px; margin-bottom: 25px; }
-        .stat-card { background: rgba(255,255,255,0.03); border: 1px solid var(--border); padding: 12px; border-radius: 12px; text-align: center; transition: 0.3s; }
-        .stat-card:hover { border-color: var(--neon); background: rgba(0, 242, 255, 0.05); }
-        .stat-card div:first-child { font-size: 0.55rem; color: #64748b; margin-bottom: 5px; font-weight: 800; }
-        .stat-card div:last-child { font-size: 0.75rem; font-weight: 800; color: var(--neon); font-family: 'JetBrains Mono'; }
+        body {
+            font-family: 'Plus Jakarta Sans', sans-serif;
+            background: radial-gradient(circle at top right, #0f172a, #020617);
+            color: var(--text-main);
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            overflow-x: hidden;
+            padding: 20px;
+        }
 
-        .glass-card { background: var(--card); border: 1px solid var(--border); border-radius: 24px; padding: 25px; }
-        input { width: 100%; background: rgba(0, 0, 0, 0.5); border: 1px solid var(--border); border-radius: 12px; padding: 18px; color: #fff; margin-bottom: 15px; }
-        .btn-luxury { width: 100%; background: var(--neon); color: #000; border: none; padding: 18px; border-radius: 12px; font-weight: 800; cursor: pointer; transition: 0.3s; }
+        /* Ambient Glow Background */
+        .aura {
+            position: fixed;
+            width: 600px; height: 600px;
+            border-radius: 50%;
+            background: radial-gradient(circle, rgba(37, 99, 235, 0.1) 0%, transparent 70%);
+            z-index: -1;
+            filter: blur(80px);
+        }
+        .aura-1 { top: -150px; left: -150px; }
+        .aura-2 { bottom: -150px; right: -150px; }
 
-        .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; margin-top: 25px; }
-        .item { background: var(--card); border: 1px solid var(--border); padding: 20px; border-radius: 18px; text-align: center; cursor: pointer; transition: 0.3s; }
-        .item:active { transform: scale(0.95); background: rgba(0, 242, 255, 0.05); }
-        .item i { color: var(--neon); font-size: 1.2rem; margin-bottom: 8px; }
+        .container {
+            width: 100%;
+            max-width: 850px;
+            position: relative;
+        }
 
-        .toast { position: fixed; top: 20px; right: 20px; background: #fff; color: #000; padding: 10px 20px; border-radius: 8px; font-weight: 800; font-size: 0.7rem; display: none; z-index: 2000; }
+        header {
+            text-align: center;
+            margin-bottom: 40px;
+        }
+
+        header h1 {
+            font-size: 2.5rem;
+            font-weight: 800;
+            letter-spacing: -1px;
+            background: linear-gradient(to bottom, #ffffff 40%, #94a3b8 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            margin-bottom: 8px;
+        }
+
+        header p {
+            color: #64748b;
+            font-weight: 400;
+            letter-spacing: 3px;
+            font-size: 0.7rem;
+            text-transform: uppercase;
+        }
+
+        /* Premium Card Container */
+        .visualizer-card {
+            background: var(--glass-bg);
+            backdrop-filter: blur(25px);
+            border: 1px solid var(--glass-border);
+            border-radius: 32px;
+            padding: 40px;
+            box-shadow: 0 40px 100px -20px rgba(0, 0, 0, 0.7);
+        }
+
+        .input-group {
+            display: flex;
+            background: rgba(0, 0, 0, 0.25);
+            padding: 10px;
+            border-radius: 20px;
+            border: 1px solid var(--glass-border);
+            margin-bottom: 30px;
+            transition: 0.3s;
+        }
+
+        .input-group:focus-within {
+            border-color: var(--accent-blue);
+            box-shadow: 0 0 20px rgba(59, 130, 246, 0.15);
+        }
+
+        input[type="url"] {
+            flex: 1;
+            background: transparent;
+            border: none;
+            padding: 12px 20px;
+            color: white;
+            font-size: 0.95rem;
+            outline: none;
+        }
+
+        .btn-extract {
+            background: var(--primary-gradient);
+            color: white;
+            border: none;
+            padding: 0 30px;
+            border-radius: 14px;
+            font-weight: 700;
+            cursor: pointer;
+            transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+        }
+
+        .btn-extract:hover {
+            transform: scale(1.02);
+            box-shadow: 0 10px 25px rgba(37, 99, 235, 0.4);
+        }
+
+        /* Code Viewer Area */
+        #resultContainer {
+            display: none;
+            animation: fadeIn 0.6s ease;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(15px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        .meta-bar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 15px;
+            padding: 0 10px;
+        }
+
+        .author-tag {
+            font-size: 0.75rem;
+            background: rgba(59, 130, 246, 0.1);
+            color: var(--accent-blue);
+            padding: 6px 15px;
+            border-radius: 100px;
+            border: 1px solid rgba(59, 130, 246, 0.2);
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .code-canvas {
+            position: relative;
+            background: rgba(2, 6, 23, 0.8);
+            border-radius: 24px;
+            border: 1px solid var(--glass-border);
+            padding: 25px;
+            overflow: hidden;
+        }
+
+        pre {
+            font-family: 'JetBrains Mono', monospace;
+            font-size: 0.85rem;
+            line-height: 1.7;
+            color: #94a3b8;
+            max-height: 400px;
+            overflow-y: auto;
+            white-space: pre-wrap;
+        }
+
+        .btn-copy {
+            position: absolute;
+            top: 15px;
+            right: 15px;
+            background: rgba(255, 255, 255, 0.05);
+            color: white;
+            border: 1px solid var(--glass-border);
+            padding: 8px 16px;
+            border-radius: 10px;
+            font-size: 0.75rem;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+
+        .btn-copy:hover { background: white; color: black; }
+
+        /* Custom Scrollbar */
+        pre::-webkit-scrollbar { width: 5px; }
+        pre::-webkit-scrollbar-thumb { background: #1e293b; border-radius: 10px; }
+
+        /* Loading */
+        .loading-shimmer {
+            display: none;
+            text-align: center;
+            padding: 40px;
+        }
+
+        .spinner {
+            width: 30px; height: 30px;
+            border: 3px solid rgba(59, 130, 246, 0.1);
+            border-top-color: var(--accent-blue);
+            border-radius: 50%;
+            display: inline-block;
+            animation: spin 0.8s linear infinite;
+        }
+        @keyframes spin { to { transform: rotate(360deg); } }
+
+        footer {
+            text-align: center;
+            margin-top: 30px;
+            font-size: 0.65rem;
+            color: #475569;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+        }
+
+        @media (max-width: 600px) {
+            .input-group { flex-direction: column; background: transparent; border: none; padding: 0; }
+            input[type="url"] { background: rgba(0,0,0,0.2); border-radius: 15px; margin-bottom: 10px; border: 1px solid var(--glass-border); }
+            .btn-extract { padding: 18px; }
+        }
     </style>
 </head>
 <body>
-    <div class="toast" id="corsToast"></div>
+    <div class="aura aura-1"></div>
+    <div class="aura aura-2"></div>
+
     <div class="container">
-        <div class="header"><h1>dYpSy Cors</h1></div>
+        <header>
+            <h1>Source Visualizer</h1>
+            <p>Elevating Code Accessibility</p>
+        </header>
 
-        <div class="live-stats">
-            <div class="stat-card"><div>MEMORY</div><div id="mem">42.08%</div></div>
-            <div class="stat-card"><div>TRAFFIC</div><div id="traf">1.02 GB</div></div>
-            <div class="stat-card"><div>PING</div><div id="ping">24 ms</div></div>
-        </div>
+        <main class="visualizer-card">
+            <div class="input-group">
+                <input type="url" id="targetUrl" placeholder="Enter secure URL (https://)..." required>
+                <button class="btn-extract" onclick="visualizeCode()" id="btnText">Visualize</button>
+            </div>
 
-        <div class="glass-card">
-            <input type="url" id="urlInput" placeholder="TARGET URL...">
-            <button class="btn-luxury" id="genBtn">INJECT PROTOCOL</button>
-        </div>
+            <div class="loading-shimmer" id="loader">
+                <div class="spinner"></div>
+                <p style="margin-top: 15px; font-size: 0.8rem; color: #64748b;">Syncing with DYPSY Core...</p>
+            </div>
 
-        <div class="grid">
-            <div class="item" onclick="notify('Stealth Mode Active')"><i class="fas fa-user-secret"></i><h4>Stealth</h4></div>
-            <div class="item" onclick="notify('Neural Parser Ready')"><i class="fas fa-microchip"></i><h4>Neural</h4></div>
-        </div>
+            <div id="resultContainer">
+                <div class="meta-bar">
+                    <div class="author-tag" id="authorDisplay">CREATOR: DYPSY</div>
+                    <div style="font-size: 0.7rem; color: #475569;">STATUS: ENCRYPTED SYNC</div>
+                </div>
+                <div class="code-canvas">
+                    <button class="btn-copy" onclick="copySource()" id="copyBtn">Copy Source</button>
+                    <pre id="codeView"></pre>
+                </div>
+            </div>
+        </main>
+
+        <footer>Engineering by DYPSY</footer>
     </div>
 
     <script>
-        // --- LOGIC ANGKA BERGERAK ---
-        function updateStats() {
-            // Memory: fluktuasi 40.00 - 45.00
-            const mem = (Math.random() * (45 - 40) + 40).toFixed(2);
-            // Traffic: fluktuasi 1.00 - 1.50
-            const traf = (Math.random() * (1.5 - 1.0) + 1.0).toFixed(2);
-            // Ping: 20 - 40
-            const ping = Math.floor(Math.random() * (40 - 20) + 20);
+        async function visualizeCode() {
+            const url = document.getElementById('targetUrl').value.trim();
+            const loader = document.getElementById('loader');
+            const result = document.getElementById('resultContainer');
+            const btn = document.getElementById('btnText');
 
-            document.getElementById('mem').innerText = mem + '%';
-            document.getElementById('traf').innerText = traf + ' GB';
-            document.getElementById('ping').innerText = ping + ' ms';
+            if(!url.startsWith('https://')) {
+                alert('Please enter a valid HTTPS URL');
+                return;
+            }
+
+            loader.style.display = 'block';
+            result.style.display = 'none';
+            btn.disabled = true;
+
+            try {
+                // Menggunakan API ResellerGaming (DYPSY Partner)
+                const response = await fetch(`https://api.resellergaming.my.id/tools/getcode?url=${encodeURIComponent(url)}`);
+                const data = await response.json();
+
+                if(data.status) {
+                    // Update identitas kreator secara hardcoded ke DYPSY
+                    document.getElementById('authorDisplay').textContent = "AUTHOR: DYPSY";
+                    document.getElementById('codeView').textContent = data.result.html;
+                    
+                    loader.style.display = 'none';
+                    result.style.display = 'block';
+                } else {
+                    throw new Error();
+                }
+            } catch (err) {
+                loader.style.display = 'none';
+                alert('Connection failed. Dypsy Engine could not fetch source.');
+            } finally {
+                btn.disabled = false;
+            }
         }
-        setInterval(updateStats, 1500); // Update tiap 1.5 detik
 
-        function notify(msg) {
-            const t = document.getElementById('corsToast');
-            t.innerText = msg;
-            t.style.display = 'block';
-            setTimeout(() => t.style.display = 'none', 2000);
+        function copySource() {
+            const code = document.getElementById('codeView').textContent;
+            const copyBtn = document.getElementById('copyBtn');
+            navigator.clipboard.writeText(code).then(() => {
+                copyBtn.textContent = "COPIED";
+                setTimeout(() => copyBtn.textContent = "Copy Source", 2000);
+            });
         }
     </script>
 </body>
